fix compile errs for older java versions